# minesweeper

./: .gitignore  CMakeLists.txt
include/: Cell.h  Common.h  ICell.h  IMinefield.h  Minefield.h  mainwindow.h
src/: Cell.cpp  Minefield.cpp  main.cpp  mainwindow.cpp
